--- a/exp-04/exp-04.ipynb
+++ b/exp-04/exp-04.ipynb
@@ -26,21 +26,20 @@
     "import os\n",
     "import sys\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
     "import random\n",
     "from datetime import datetime\n",
-    "from tensorflow.keras import layers, models, regularizers\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from xgboost import XGBClassifier\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "import matplotlib.pyplot as plt\n",
     "from tabulate import tabulate\n",
     "from typing import Dict, List, Any\n",
-    "import pandas as pd\n",
-    "import pickle\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
     "from tensorflow.keras.layers import GlobalAveragePooling2D, BatchNormalization"
    ]
@@ -60,6 +59,8 @@
     "# Create required directories\n",
     "for dir_path in [MODEL_DIR, DATA_DIR, RESULTS_DIR]:\n",
     "    os.makedirs(dir_path, exist_ok=True)\n",
+    "\n",
+    "    \n",
     "\n",
     "# Configuration dictionary\n",
     "hyperparameters = {\n",
