--- a/exp-04/exp-04.ipynb
+++ b/exp-04/exp-04.ipynb
@@ -82,7 +82,7 @@
     "    'split_index': 0,\n",
     "    'architecture': 'all',  # options: specific architecture like 'cnn' or 'all'\n",
     "    'classifier': 'all',  # choices: 'random_forest', 'svm', 'gradient_boosting', 'xgboost'\n",
-    "    'data_dir': '/mnt/c/Users/Siam/OneDrive - Tuskegee University/ai-arni-nsf/SAMPLE_dataset_public/png_images/qpm/real'\n",
+    "    'data_dir': '\"D:/SAMPLE_dataset_public/png_images/qpm/real\"'\n",
     "}\n",
     "\n",
     "# Configuration dictionary\n",
@@ -887,18 +887,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
   }
  },
  "nbformat": 4,
