--- a/exp-04/exp_04.01.ipynb
+++ b/exp-04/exp_04.01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -10,33 +10,29 @@
     "id": "AH0eSlYf4Qtb",
     "outputId": "46355118-cc7c-4aa6-d240-d864b9eafaa8"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'SAMPLE_dataset_public'...\n",
-      "remote: Enumerating objects: 8159, done.\u001b[K\n",
-      "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (13/13), done.\u001b[K\n",
-      "remote: Total 8159 (delta 5), reused 13 (delta 3), pack-reused 8142 (from 1)\u001b[K\n",
-      "Receiving objects: 100% (8159/8159), 1.41 GiB | 38.92 MiB/s, done.\n",
-      "Resolving deltas: 100% (44/44), done.\n",
-      "Updating files: 100% (8073/8073), done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !git clone https://github.com/benjaminlewis-afrl/SAMPLE_dataset_public.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "Xp1hRqDzyaGf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-06 12:50:45.050672: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-11-06 12:50:46.553882: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-11-06 12:50:55.830981: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "# [Cell 1] - Import statements\n",
     "import os\n",
@@ -63,6 +59,44 @@
     "from datetime import timedelta\n",
     "from IPython.display import display, clear_output\n",
     "from ipywidgets import Output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-06 12:51:18.258862: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-11-06 12:51:18.383410: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-11-06 12:51:18.383468: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:982] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add at the start of your script to limit GPU memory growth\n",
+    "import tensorflow as tf\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "print(gpus)\n",
+    "if gpus:\n",
+    "    try:\n",
+    "        for gpu in gpus:\n",
+    "            tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)"
    ]
   },
   {
@@ -105,7 +139,7 @@
     "    'split_index': 0,\n",
     "    'architecture': 'all',  # options: specific architecture like 'cnn' or 'all'\n",
     "    'classifier': 'all',  # choices: 'random_forest', 'svm', 'gradient_boosting', 'xgboost'\n",
-    "    'data_dir': '/content/SAMPLE_dataset_public/png_images/qpm/real'\n",
+    "    'data_dir': '/mnt/d/SAMPLE_dataset_public/png_images/qpm/real' # Currently working only with the qpm/real folder\n",
     "}\n",
     "\n",
     "# Configuration dictionary\n",
@@ -203,13 +237,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "Ru6BTX4MyaGj"
    },
    "outputs": [],
    "source": [
     "# [Cell 3] - Utility functions [environment_checker.py/seeds.py/ResultsTracker.py]\n",
+    "\n",
+    "import subprocess\n",
+    "\n",
+    "def get_cuda_version():\n",
+    "    try:\n",
+    "        # Run the nvcc command to get the CUDA version\n",
+    "        cuda_version = subprocess.check_output(['nvcc', '--version']).decode('utf-8')\n",
+    "        return cuda_version\n",
+    "    except Exception as e:\n",
+    "        return f\"Error getting CUDA version: {e}\"\n",
+    "\n",
+    "def get_nvidia_smi_info():\n",
+    "    try:\n",
+    "        # Run the nvidia-smi command to get GPU information\n",
+    "        nvidia_smi_info = subprocess.check_output(['nvidia-smi']).decode('utf-8')\n",
+    "        return nvidia_smi_info\n",
+    "    except Exception as e:\n",
+    "        return f\"Error getting nvidia-smi info: {e}\"\n",
     "\n",
     "def check_environment():\n",
     "    \"\"\"Print and check library versions against requirements\"\"\"\n",
@@ -341,6 +393,14 @@
     "            print(f\"  • {gpu}\")\n",
     "    else:\n",
     "        print(\"No GPUs found\")\n",
+    "\n",
+    "    # Print CUDA version\n",
+    "    print(\"CUDA Version:\")\n",
+    "    print(get_cuda_version())\n",
+    "\n",
+    "    # Print NVIDIA GPU information\n",
+    "    print(\"NVIDIA GPU Info:\")\n",
+    "    print(get_nvidia_smi_info())\n",
     "\n",
     "    # TensorFlow environment variables\n",
     "    tf_vars = [var for var in os.environ if 'TF_' in var]\n",
@@ -476,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "ndJb7CnsyaGk"
    },
@@ -576,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "bnbguAfByaGl"
    },
@@ -674,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "qQAPAo9ODQ9b"
    },
@@ -825,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "7te5EHbOyaGl"
    },
@@ -957,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "XjXTKYynyaGm"
    },
@@ -1072,34 +1132,34 @@
     "\n",
     "    return history\n",
     "\n",
-    "def plot_training_history(history):\n",
-    "    plt.figure(figsize=(12, 4))\n",
+    "# def plot_training_history(history):\n",
+    "#     plt.figure(figsize=(12, 4))\n",
     "\n",
-    "    # Plot Loss\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.plot(history.history['loss'], label='Train Loss')\n",
-    "    plt.plot(history.history['val_loss'], label='Val Loss')\n",
-    "    plt.title('Loss over epochs')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.legend()\n",
+    "#     # Plot Loss\n",
+    "#     plt.subplot(1, 2, 1)\n",
+    "#     plt.plot(history.history['loss'], label='Train Loss')\n",
+    "#     plt.plot(history.history['val_loss'], label='Val Loss')\n",
+    "#     plt.title('Loss over epochs')\n",
+    "#     plt.xlabel('Epoch')\n",
+    "#     plt.ylabel('Loss')\n",
+    "#     plt.legend()\n",
     "\n",
-    "    # Plot Accuracy\n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
-    "    plt.plot(history.history['val_accuracy'], label='Val Accuracy')\n",
-    "    plt.title('Accuracy over epochs')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Accuracy')\n",
-    "    plt.legend()\n",
+    "#     # Plot Accuracy\n",
+    "#     plt.subplot(1, 2, 2)\n",
+    "#     plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+    "#     plt.plot(history.history['val_accuracy'], label='Val Accuracy')\n",
+    "#     plt.title('Accuracy over epochs')\n",
+    "#     plt.xlabel('Epoch')\n",
+    "#     plt.ylabel('Accuracy')\n",
+    "#     plt.legend()\n",
     "\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
+    "#     plt.tight_layout()\n",
+    "#     plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "7U-tX4GUyaGm"
    },
@@ -1191,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "MSl9a4lJyaGn"
    },
@@ -1292,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "U04153MjyaGn"
    },
@@ -1320,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "4MfJ9pxB2LuC"
    },
@@ -1329,7 +1389,7 @@
     "# Create a MultiWriter class that writes to both console and file\n",
     "class MultiWriter:\n",
     "    def __init__(self, filename):\n",
-    "        self.log = open(filename, 'w')\n",
+    "        self.log = open(filename, 'w', encoding='utf-8')\n",
     "        self.out = Output()  # Output widget to display output in the notebook\n",
     "        display(self.out)    # Display the widget in the notebook cell\n",
     "\n",
@@ -1344,6 +1404,20 @@
     "\n",
     "    def flush(self):\n",
     "        self.log.flush()\n",
+    "\n",
+    "# class MultiWriter:\n",
+    "#     def __init__(self, filename):\n",
+    "#         self.log = open(filename, 'w', encoding='utf-8')  # Use UTF-8 encoding\n",
+    "#         self.stdout = sys.__stdout__\n",
+    "\n",
+    "#     def write(self, message):\n",
+    "#         self.log.write(message)\n",
+    "#         self.stdout.write(message)  # Ensure output is also printed to console\n",
+    "\n",
+    "#     def flush(self):\n",
+    "#         self.log.flush()\n",
+    "#         self.stdout.flush()\n",
+    "\n",
     "\n",
     "def setup_directories():\n",
     "    try:\n",
@@ -1370,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1388,13 +1462,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Output will be saved to: /content/results/2024-11-03-15h-06m-49s-dir_qpm_real-mode_all-split_0-arch_all-clf_all.txt\n"
+      "> Output will be saved to: exp-04/results/2024-11-06-12h-51m-19s-dir_qpm_real-mode_all-split_0-arch_all-clf_all.txt\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfdc386a95824b388bda48c0d8a4d89b",
+       "model_id": "a9c7cc91a9e9460293118da2950fecfc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1409,10 +1483,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:The `save_format` argument is deprecated in Keras 3. We recommend removing this argument as it can be inferred from the file path. Received: save_format=h5\n",
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n",
-      "WARNING:absl:The `save_format` argument is deprecated in Keras 3. We recommend removing this argument as it can be inferred from the file path. Received: save_format=h5\n",
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_3045/3284734531.py\", line 24, in <module>\n",
+      "    main()\n",
+      "  File \"/tmp/ipykernel_3045/2469737987.py\", line 16, in main\n",
+      "    data_path = save_processed_data(data_dir, split_index)\n",
+      "  File \"/tmp/ipykernel_3045/777656524.py\", line 66, in save_processed_data\n",
+      "    x_train, y_train, x_test, y_test = load_and_split_data(data_dir, split_index)\n",
+      "  File \"/tmp/ipykernel_3045/777656524.py\", line 6, in load_and_split_data\n",
+      "    class_folders = sorted(os.listdir(data_dir))\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'D:/SAMPLE_dataset_public/png_images/qpm/real'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== PROCESS FINISHED ===\n"
      ]
     }
    ],
@@ -1473,7 +1560,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1486,7 +1574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.15"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
